load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

cc_library(
    name = "clib",
    srcs = select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "libs/libmupdf_darwin_amd64.a",
            "libs/libmupdfthird_darwin_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "libs/libmupdf_darwin_arm64.a",
            "libs/libmupdfthird_darwin_arm64.a",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "libs/libmupdf_linux_amd64.a",
            "libs/libmupdfthird_linux_amd64.a",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "libs/libmupdf_linux_arm64.a",
            "libs/libmupdfthird_linux_arm64.a",
        ],
        "//conditions:default": ["UNSUPPORTED_PLATFORM"],
    }),
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
)

go_library(
    name = "go-fitz",
    srcs = [
        "fitz.go",
        "fitz_cgo.go",
        "fitz_content_types.go",
    ] + glob(["include/**/*.h"]),
    cdeps = [":clib"],
    cgo = True,
    copts = ["-Iinclude"],
    importpath = "github.com/gen2brain/go-fitz",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":go-fitz",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-fitz_test",
    srcs = [
        "example_test.go",
        "fitz_content_types_test.go",
        "fitz_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go-fitz"],
    embedsrcs = [
        "testdata/test.bmp",
        "testdata/test.cbz",
        "testdata/test.epub",
        "testdata/test.fb2",
        "testdata/test.gif",
        "testdata/test.jb2",
        "testdata/test.jp2",
        "testdata/test.jpg",
        "testdata/test.jxr",
        "testdata/test.pam",
        "testdata/test.pbm",
        "testdata/test.pdf",
        "testdata/test.pfm",
        "testdata/test.pgm",
        "testdata/test.ppm",
        "testdata/test.tif",
        "testdata/test.xps",
    ],
)
